# stack-ai-rag

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml
app/: main.py
app/api/routes/: concepts.py  ingest.py  query.py  ui.py
app/core/: config.py  runtime.py
app/db/: database.py  repositories.py  schema.py
app/models/: concepts.py  ingest.py  query.py
app/services/: answer_shape.py  chunking.py  concepts.py  generation.py  hallucination.py  ingestion.py  intent.py  keyword_search.py  mistral_client.py  pdf_extract.py  policy.py  prompting.py  query_rewrite.py  relevance.py  retrieval.py  semantic_search.py  table_completion.py  tokenizer.py
app/ui/: answer_format.py
app/ui/static/: styles.css
app/ui/templates/: document_viewer.html  index.html
app/ui/templates/partials/: chat_turn.html  concepts_panel.html  ingest_status.html
docs/: ingestion.md
tests/: test_answer_format.py  test_answer_shape.py  test_app_smoke.py  test_chunking.py  test_concepts_api.py  test_concepts_service.py  test_db_schema.py  test_hallucination.py  test_ingest_clear.py  test_intent.py  test_keyword_search.py  test_mistral_client.py  test_pdf_extract.py  test_policy.py  test_prompting.py  test_query_api.py  test_query_rewrite.py  test_regressions.py  test_relevance.py  test_retrieval.py  test_semantic_search.py  test_table_completion.py  test_ui.py  test_ui_concepts.py  test_ui_integration.py  test_ui_sources.py
